[gd_scene load_steps=8 format=3 uid="uid://d3ajfk7j3qi3n"]

[ext_resource type="Texture2D" uid="uid://dee7y88td6tok" path="res://Textures/Player/player_sprite.png" id="1_0isxx"]
[ext_resource type="Script" uid="uid://cw64n1r1hnc7h" path="res://wizard.gd" id="1_34mad"]
[ext_resource type="Script" uid="uid://brfbrjac60b2d" path="res://sprite_2d.gd" id="3_xo1iy"]
[ext_resource type="PackedScene" uid="uid://d1d1l1l6jrjxu" path="res://hurt_box.tscn" id="4_xo1iy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_34mad"]
radius = 5.0
height = 20.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wsbrn"]
size = Vector2(11, 18)

[sub_resource type="CircleShape2D" id="CircleShape2D_xo1iy"]
radius = 369.749

[node name="Wizard" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_34mad")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_0isxx")
hframes = 2
script = ExtResource("3_xo1iy")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 2)
shape = SubResource("CapsuleShape2D_34mad")

[node name="HurtBox" parent="." instance=ExtResource("4_xo1iy")]
collision_layer = 2
collision_mask = 2
HurtBoxType = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(2, 3)
shape = SubResource("RectangleShape2D_wsbrn")

[node name="Attack" type="Node2D" parent="."]

[node name="IceTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 1.5

[node name="IceAttackTimer" type="Timer" parent="Attack/IceTimer"]
unique_name_in_owner = true
wait_time = 0.075

[node name="EnemyDetectionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
shape = SubResource("CircleShape2D_xo1iy")

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="Attack/IceTimer" to="." method="_on_ice_timer_timeout"]
[connection signal="timeout" from="Attack/IceTimer/IceAttackTimer" to="." method="_on_ice_attack_timer_timeout"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_shape_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_shape_exited"]

[editable path="HurtBox"]
